multiclass clf w/o sklearn

--- a/hands_on_ml/multi_class_classification.ipynb
+++ b/hands_on_ml/multi_class_classification.ipynb
@@ -534,6 +534,14 @@
     "accuracy = (y_pred == y_test).sum()/len(y_test) * 100 # accuracy formula - or (y_pred == y_test).mean()\n",
     "print(f\"Accuracy is {accuracy.item()}%\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df95854f-d8ea-4f3b-86ac-89709ec0f017",
+   "metadata": {},
+   "source": [
+    "We can see that there is an increase in performance by doing early stopping. Therefore by early stopping, overfitting of the model is prevented"
+   ]
   }
  ],
  "metadata": {
